--- a/app.json
+++ b/app.json
@@ -1,1 +1,111 @@
+const fs = require("fs");
+const chalk = require("chalk");
 
+
+//
+global.available = true;
+global.autoReadGc = false;
+global.autoReadAll = false;
+global.antitags = true;
+
+
+//auto functioner
+global.autoTyping = false;                //auto tying by default off.
+global.autoRecord = false;                //auto recording by default off.
+global.groupevent = false;                //This is the new variable for controlling group event handling.
+global.statusseen = true;                 //This is the new variable for controlling status seen.
+
+
+//
+global.Owner = ["243993366258","243834030713"];         //If you want singal number so global.Owner = ['8801928502256'] Change into your number.
+global.OwnerNumber = ["243993366258","243834030713"];   //If you want singal number so global.Owner = ['8801928502256'] Change into your number.
+global.ownertag = ["243993366258"];
+global.OwnerName = "Ryuzaki";
+global.BotName = "Skynet-MD";
+global.packname = "Skynet Bot";                             //Do not change.
+global.author = "By: Ryuzaki";                               //Do not change.
+global.BotSourceCode = "https://github.com/Hitsugaya76/SKYNET_MD"; //Do not change.
+global.SupportGroupLink = "https://chat.whatsapp.com/EjsQvJNcFGVCSfaBEIxZm2"; 
+
+
+//
+global.sessionName = "session";                          //Do not change.
+
+
+//
+global.prefa = ["."];                                    //Default prefix here.
+global.openAiAPI = "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";
+
+
+//
+global.location = "Congo, Lushi";                   
+global.reactmoji = "✅";
+global.themeemoji = "💖";
+global.vidmenu = { url: 'https://tenor.com/view/jujutsu-kaisen0-yuta-okkotsu-gif-26767662' };
+global.websitex = "";
+global.lolhuman = "Ryuzaki";
+
+
+//
+global.BotLogo = fs.readFileSync("./Assets/pic1.jpg");
+global.Thumb = fs.readFileSync("./Assets/pic9.jpg");
+global.Thumb1 = fs.readFileSync("./Assets/pic5.jpg");
+global.ErrorPic = fs.readFileSync("./Assets/pic7.jpg");
+
+
+//
+global.ntilinkytvid = []
+global.ntilinkytch = []
+global.ntilinkig = []
+global.ntilinkfb = []
+global.ntilinktg = []
+global.ntilinktt = []
+global.ntilinktwt = []
+global.ntilinkall = []
+global.nticall = []
+global.ntwame = []
+global.nttoxic = []
+global.ntnsfw = []
+global.ntvirtex = []
+global.rkyt = []
+global.wlcm = []
+global.gcrevoke = []
+global.autorep = []
+global.ntilink = []
+
+
+//
+global.mess = {
+    jobdone: 'Here you go...',
+    useradmin: Désolé, seule *Les administrateurs du group* peuvent utiliser cette commande!',
+    botadmin: Désole, cette commande est réservé * aux administrateurs de ce group.',
+    botowner: 'Seul Le proprio peut utiliser cette commande.',
+    grouponly: 'Cette commande ne peut être exécuté que dans un *Group*,!',
+    privateonly: 'This command is only made for *Private Chat*, Baka!',
+    botonly: 'Only the *Bot itself* can use this command!',
+    waiting: 'Veillez pacienter...',
+    nolink: 'Veillez insérer un lien svp ',
+    error: 'Une errer se produite!',
+    banned: 'Vous avez était *Bannis * De l utilisation du bot!',
+    bangc: 'Ce groupe est  *Bannis* de l.utilisation du bot!',
+    nonsfw: 'Nsfw est désactivé dans ce groupe!',
+
+}
+
+global.limitawal = {
+  premium: "Infinity",
+  free: 2,
+  monayawal: 1000,
+};
+
+global.limitawal = {
+  rakyat: "Infinity",
+  free: 100,
+};
+
+global.APIs = {
+  zenz: "https://zenzapis.xyz",
+};
+global.APIKeys = {
+  "https://zenzapis.xyz": "5d1197db351b",
+};
